Details
-
Bug
-
Resolution: Fixed
-
P1: Critical
-
6.7.0
-
None
-
-
5da51e012 (dev), b3be35d41 (6.7), 844bd4ced (6.7.1)
Description
Beginning in Qt 6.7.0, setting 'Window.visible = false' on a visible window unexpectedly clobbers the existing window state (and position, in some cases).
Repro steps:
- Run the included Qt Quick project
- Maximize the window
- Click the button to hide the window for 2 seconds
Bonus repro steps (multi-monitor scenario):
- Run the included Qt Quick project
- Move the window to another monitor
- Maximize the window
- Click the button to hide the window for 2 seconds
Expected Behavior:
After 2 seconds, the window should reappear at the location and state (minimized/maximized/fullscreen/normal) it was prior to being hidden. This is the behavior of the included project when running on Qt 6.6.3 or earlier.
Actual Behavior:
On Qt 6.7.0, the window reappears in a non-maximized state and sometimes in a different location if the window was moved. For the multi-monitor scenario, the window may appear on a completely different screen than it was when hidden, though this doesn't seem to happen consistently.
Attachments
For Gerrit Dashboard: QTBUG-124363 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
556950,5 | Only apply QWindow::setVisibility() on first show or explicit request | dev | qt/qtdeclarative | Status: MERGED | +2 | 0 |
558555,2 | Only apply QWindow::setVisibility() on first show or explicit request | 6.7 | qt/qtdeclarative | Status: MERGED | +2 | 0 |
558606,2 | Only apply QWindow::setVisibility() on first show or explicit request | 6.7.1 | qt/qtdeclarative | Status: MERGED | +2 | 0 |